--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "first_node",
   "version": "1.0.0",
   "description": "First ever node project",
-  "main": "src/app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "start": "npx nodemon"
+    "start": "npx nodemon",
+    "watch": "tsc -p tsconfig.json --watch"
   },
   "author": "Jacob Solomon",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17"
   }
 }
